[gd_scene load_steps=11 format=3 uid="uid://bcjqlb1yfoq4u"]

[ext_resource type="Script" uid="uid://5r481sstupl5" path="res://scripts/track_generator.gd" id="1_generator"]
[ext_resource type="PackedScene" path="res://scenes/vehicles/drift_car_hatchback.tscn" id="2_car"]
[ext_resource type="Script" uid="uid://clisknmj5tm3i" path="res://scripts/follow_camera.gd" id="3_cam"]
[ext_resource type="Script" path="res://scripts/track_hud.gd" id="4_hud"]

[sub_resource type="Curve3D" id="Curve3D_empty"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_asphalt"]
frequency = 0.2
fractal_type = 0

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_road"]
noise = SubResource("FastNoiseLite_asphalt")
seamless = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_road"]
cull_mode = 2
albedo_color = Color(0.3, 0.3, 0.3, 1)
albedo_texture = SubResource("NoiseTexture2D_road")
roughness = 0.8

[sub_resource type="Environment" id="Environment_sky"]
background_mode = 1
background_color = Color(0.1, 0.6, 0.8, 1)
ambient_light_source = 2
ambient_light_color = Color(0.3, 0.3, 0.3, 1)

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_kill"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_track"]
friction = 0.8
rough = true

[node name="ProceduralTrack" type="Node3D" node_paths=PackedStringArray("path_node", "csg_polygon")]
script = ExtResource("1_generator")
path_node = NodePath("Path3D")
csg_polygon = NodePath("TrackMesh")
radius = 150.0
num_points = 50
randomness = 30.0

[node name="Path3D" type="Path3D" parent="."]
curve = SubResource("Curve3D_empty")

[node name="TrackMesh" type="CSGPolygon3D" parent="."]
use_collision = true
collision_layer = 1
collision_mask = 1
collision_priority = 1.0
polygon = PackedVector2Array(-5, 1, -5, 0, 5, 0, 5, 1)
mode = 2
path_node = NodePath("../Path3D")
path_interval_type = 0
path_interval = 1.0
path_simplify_angle = 0.0
path_rotation = 2
path_rotation_accurate = false
path_local = true
path_continuous_u = true
path_u_distance = 1.0
path_joined = true
material = SubResource("StandardMaterial3D_road")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_sky")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, -0.75, 0.433013, 0, 10, 0)
shadow_enabled = true

[node name="PlayerCar" parent="." instance=ExtResource("2_car")]
transform = Transform3D(-1, 0, -8.742278e-08, 0, 1, 0, 8.742278e-08, 0, -1, 0, 2, 0)

[node name="Camera3D" type="Camera3D" parent="."]
script = ExtResource("3_cam")
target_path = NodePath("../PlayerCar")
height = 25.0
follow_speed = 6.0
camera_angle = Vector3(-55, 0, 0)

[node name="DebugUI" type="CanvasLayer" parent="."]
script = ExtResource("4_hud")

[node name="SpeedLabel" type="Label" parent="DebugUI"]
offset_left = 20.0
offset_top = 20.0
offset_right = 200.0
offset_bottom = 50.0
text = "Speed: 0 km/h"

[node name="DriftLabel" type="Label" parent="DebugUI"]
offset_left = 20.0
offset_top = 50.0
offset_right = 200.0
offset_bottom = 80.0
text = "Drift: 0%"

[node name="BoostLabel" type="Label" parent="DebugUI"]
offset_left = 20.0
offset_top = 80.0
offset_right = 200.0
offset_bottom = 110.0
text = "Boost: Ready"

[node name="KillZone" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -10, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="KillZone"]
shape = SubResource("WorldBoundaryShape3D_kill")
